# Universe

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_tutor_qr_biometric_forecast.py  0003_student_tg_bootstrap.py  0004_telegram_ids_bigint.py  0005_ai_faq_tg_extensions.py  0006_ai_import_drafts.py  0007_user_phone_number.py  0008_schedule_export_type.py
app/: main.py
docs/: architecture-by-file.md  spec-web-gap-checklist.md  staging-smoke-checklist.md
scripts/: bootstrap_demo_group_via_api.py  bootstrap_qr_attendance_stats_via_api.py  create_service_token.py
student-app/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
tests/: conftest.py  test_admin_api.py  test_ai_import_service.py  test_async_runner.py  test_attendance_service.py  test_auth_service.py  test_biometric_service.py  test_faq_ai.py  test_import_export_service.py  test_internal_api.py  test_public_api.py  test_rating_service.py  test_request_logging.py  test_seed_demo.py  test_student_api.py  test_teacher_api.py  test_tg_api.py  test_tg_service.py
tg-service/: Dockerfile  requirements.txt
tg_service/: __init__.py  backend.py  config.py  main.py  messages.py  middleware.py  security.py
web-admin/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+171 files in other folders)
