[project]
name = "universe-backend"
version = "0.1.0"
description = "Backend for attendance and discipline system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.34",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.8",
    "celery[redis]>=5.4.0",
    "faiss-cpu>=1.8.0",
    "fastembed>=0.7.3",
    "httpx>=0.27.0",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-openrouter>=0.1.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "xlsxwriter>=3.2.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.6.2",
    "mypy>=1.11.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008", "E501", "ASYNC240"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
